<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView 
        android:id="@+id/iv_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_draw_pattern"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/draw_pattern_password"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <com.qc4w.ilocker.ui.view.LockCPicturePatternView
            android:id="@+id/lpv_lockview"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_bottom_operations"
        style="@style/LinearLayout_Operations" >

        <TextView
            android:id="@+id/btn_reset"
            style="@style/Button_Operations_Negative"
            android:background="@drawable/selector_gray_bg"
            android:text="@string/reset" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white" />

        <TextView
            android:id="@+id/btn_done"
            style="@style/Button_Operations"
            android:background="@drawable/btn_app_theme"
            android:text="@string/ok" />
    </LinearLayout>

</RelativeLayout>