<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" >

        <TextView
            android:id="@+id/tv_draw_pattern"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/draw_pattern_password"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <com.qc4w.ilocker.ui.view.LockPatternView
            android:id="@+id/lpv_lockview"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/tv_draw_pattern"
            android:layout_gravity="center_horizontal" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_bottom_operations"
        style="@style/LinearLayout_Operations" >

        <TextView
            android:id="@+id/tv_pick_color"
            style="@style/Button_Operations"
            android:background="@drawable/btn_app_theme"
            android:text="@string/pick_color_label" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tv_apply"
            style="@style/Button_Operations"
            android:background="@drawable/btn_app_theme"
            android:text="@string/apply_label" />
    </LinearLayout>

</RelativeLayout>