<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/tv_enter_digital"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/enter_digital_password"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <com.qc4w.ilocker.ui.view.EnterDigitalIndicator
        android:id="@+id/edi_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_enter_digital"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <com.qc4w.ilocker.ui.view.RingPasswordView
        android:id="@+id/rpv_password_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_centerInParent="true" />

    <LinearLayout
        android:id="@+id/ll_bottom_operations"
        style="@style/LinearLayout_Operations" >

        <TextView
            android:id="@+id/btn_reset"
            style="@style/Button_Operations_Negative"
            android:background="@drawable/selector_gray_bg"
            android:text="@string/reset" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white" />

        <TextView
            android:id="@+id/btn_done"
            style="@style/Button_Operations"
            android:background="@drawable/btn_app_theme"
            android:text="@string/ok" />
    </LinearLayout>

</RelativeLayout>