<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <View
        android:id="@+id/v_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/ll_bottom_operations"
        android:background="@color/divider_color" />

    <ListView
        android:id="@+id/lv_app_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/v_divider"
        android:divider="@color/divider_color"
        android:dividerHeight="1dp"
        android:listSelector="@color/transparent"
        android:visibility="gone" >
    </ListView>

    <RelativeLayout
        android:id="@+id/rl_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/v_divider" >

        <com.qc4w.ilocker.ui.view.CircularProgress
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerInParent="true"
            app:borderWidth="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/loading"
            android:textColor="@color/drak_gray"
            android:textSize="14sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@id/ll_bottom_operations"
        style="@style/LinearLayout_Operations" >

        <TextView
            android:id="@+id/tv_disable"
            style="@style/Button_Operations"
            android:background="@drawable/selector_gray_bg"
            android:text="@string/widget_hide"
            android:textColor="@color/drak_gray" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tv_enable"
            style="@style/Button_Operations"
            android:background="@drawable/btn_app_theme"
            android:text="@string/widget_display" />
    </LinearLayout>

</RelativeLayout>