<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop" />

    <com.qc4w.ilocker.ui.view.SpanDigitalClock
        android:id="@+id/sdc_clock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textColor="@color/white"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sdc_clock"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_week"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_date"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/ll_bottom_operations"
        style="@style/LinearLayout_Operations" >

        <TextView
            android:id="@+id/tv_disable"
            style="@style/Button_Operations"
            android:background="@drawable/selector_gray_bg"
            android:textColor="@color/drak_gray"
            android:text="@string/widget_hide" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tv_pick_color"
            style="@style/Button_Operations"
            android:background="@drawable/btn_app_theme"
            android:text="@string/pick_color_label" />
        
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tv_enable"
            style="@style/Button_Operations"
            android:background="@drawable/btn_app_theme"
            android:text="@string/widget_display" />
    </LinearLayout>
</RelativeLayout>
