<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="10dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp" >

        <ImageView
            android:id="@+id/ic_launcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/about_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ic_launcher"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/app_name"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_round_conner" >

        <LinearLayout
            android:id="@+id/ll_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_gray_bg"
            android:orientation="horizontal"
            android:padding="10dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/version_check_update"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/drak_gray"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:id="@+id/view_divider_version"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@id/ll_version"
            android:background="@color/divider_color" />

        <RelativeLayout
            android:id="@+id/rl_product_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_divider_version"
            android:background="@drawable/selector_gray_bg"
            android:padding="10dp" >

            <TextView
                android:id="@+id/tv_product_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_info"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RelativeLayout>

        <View
            android:id="@+id/view_divider_info"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@id/rl_product_info"
            android:background="@color/divider_color" />

        <RelativeLayout
            android:id="@+id/rl_product_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_divider_info"
            android:background="@drawable/selector_gray_bg"
            android:padding="10dp" >

            <TextView
                android:id="@+id/tv_product_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/use_help"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RelativeLayout>

        <View
            android:id="@+id/view_divider_help"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@id/rl_product_help"
            android:background="@color/divider_color" />

        <RelativeLayout
            android:id="@+id/rl_product_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_divider_help"
            android:background="@drawable/selector_gray_bg"
            android:padding="10dp" >

            <TextView
                android:id="@+id/tv_product_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feedback"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>